@@ -1,3 +1,5 @@
+2127.	[port]		Improved OpenSSL 0.9.8 support. [RT #16563]
+
 2126.	[bug]		Serialise validation of type ANY responses. [RT #16555]
 
 2125.	[bug]		dns_zone_getzeronosoattl() REQUIRE failure if DLZ
